--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "bits-ui": "^0.18.6",
     "clsx": "^2.1.0",
     "lucide-svelte": "^0.343.0",
-    "mode-watcher": "^0.2.1",
+    "mode-watcher": "^0.2.2",
     "socket.io-client": "^4.7.4",
+    "svelte-sonner": "^0.3.24",
     "tailwind-merge": "^2.2.1",
     "tailwind-variants": "^0.2.0"
   }
